# audio-layer

./: .ai-dev-kit.doctor-ran  .ai-dev-kit.json  .ai-starter-kit.json  .env.example  .env.local.template  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DESIGN_SYSTEM.md  README.md  ROADMAP.md  SETUP.md  VERIFICATION_GAPS.md  WORKSPACES_SPEC.md  capacitor.config.ts  electron-builder.yml  eslint.config.mjs  instrumentation.ts  llms.txt  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  promptfooconfig.yaml  tsconfig.json  vitest.api.config.ts  vitest.config.ts
.ai-dev-kit/: notify.yaml.template
.ai-starter/: config.json  progress.json  session.json
.claude/: settings.json
.codex/: config.toml  hooks.json.strict
.husky/: post-commit  pre-commit  pre-push
.storybook/: main.ts  preview.ts
app/: globals.css  landing.tsx  layout.tsx  page.tsx  recorder.tsx  template.tsx
components/: agent-builder.stories.tsx  agent-builder.test.tsx  agent-builder.tsx  ai-debug-panel.stories.tsx  ai-debug-panel.test.tsx  ai-debug-panel.tsx  audio-lines.test.tsx  audio-recorder.test.tsx  audio-recorder.tsx  audio-wave-ribbon.test.tsx  audio-wave-ribbon.tsx  auth-card.tsx  button.test.tsx  capacitor-init.tsx  chat-input.test.tsx  chat-input.tsx  chat-message.test.tsx  chat-message.tsx  intake-form-view.test.tsx  intake-form-view.tsx  integrations-settings-panel.test.tsx  integrations-settings-panel.tsx  live-recorder.tsx  (+40 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+1169 files in other folders)
