[package]
name = "audio-layer"
version = "0.1.0"
description = "audio-layer desktop shell — mic + system-audio capture for the hosted Next.js app"
authors = ["Mirror Factory"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "audio_layer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform mic capture: macOS (CoreAudio), Windows (WASAPI),
# Linux (ALSA / PulseAudio / PipeWire).
cpal = "0.15"

# macOS-only system audio via ScreenCaptureKit. The macos_14_0 feature
# unlocks the audio-only stream APIs (`with_captures_audio`). Older
# macOS versions fall back to the "not implemented" command.
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1", features = ["macos_14_0"] }

# Windows and Linux system-audio loopback remain TODO — the
# respective crates (`wasapi`, `pulse` / `libpipewire`) get added
# alongside their implementation commits.

[features]
custom-protocol = ["tauri/custom-protocol"]
